# LeGM-Lab

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  pyproject.toml
.claude/: settings.json
.claude/rules/: frontend.md  ml.md  python.md  typescript.md
alembic/: env.py
alembic/versions/: 767889d97bb1_initial_schema.py
deploy/: modal_lelm.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: analysis-skeleton.tsx  nav.tsx  take-analyzer.tsx  take-view.tsx  verdict-badge.tsx
frontend/lib/: api.ts  types.ts
scripts/: demo_cavs_comeback.py  demo_html_charts.py  demo_take.py  run_bot.py  run_live_takes.py  run_single_take.py
src/legm/: __init__.py  config.py  dependencies.py  main.py
src/legm/agent/: analyzer.py  prompts.py  tools.py
src/legm/api/: bot.py  health.py  router.py  takes.py
src/legm/db/: engine.py  models.py  repository.py
src/legm/llm/: __init__.py  base.py  claude.py  factory.py  lelm_modal.py  openai_compat.py  types.py
src/legm/stats/: __init__.py  cache.py  client.py  html_renderer.py  models.py  plots.py  service.py  utils.py
src/legm/twitter/: __init__.py  bot.py  filters.py  rate_limiter.py  (+1 more)
tests/: conftest.py
tests/test_agent/: test_analyzer.py  test_tools.py
tests/test_api/: test_cors.py  test_health.py  test_takes.py
tests/test_llm/: test_factory.py  test_lelm_modal.py  test_types.py
tests/test_stats/: test_cache.py  test_utils.py
tests/test_twitter/: test_filters.py  test_rate_limiter.py
(+4 files in other folders)
